--- a/src/skin/gray.grooveshark/css.tmp/style.tmp.css
+++ b/src/skin/gray.grooveshark/css.tmp/style.tmp.css
@@ -1,4 +1,5 @@
 *, *:before, *:after { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
+:focus { outline: 0; outline: none; }
 
 .clear { clear: both; }
 .hide { display: none !important; }
@@ -46,7 +47,7 @@ div.gplayer .player-modes ul li.active button { opacity: 0.4; cursor: default; }
 div.gplayer .player-modes ul li button { opacity: 1.0; color: #ddd; border: solid 1px #111; cursor: pointer; text-shadow: 0 1px 0 rgba(0,0,0,0.8); background-color: #454545; background-image: -moz-linear-gradient(top, #4b4b4b, #3b3b3b); background-image: -ms-linear-gradient(top, #4b4b4b, #3b3b3b); background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#4b4b4b), to(#3b3b3b)); background-image: -webkit-linear-gradient(top, #4b4b4b, #3b3b3b); background-image: linear-gradient(top, #4b4b4b, #3b3b3b); border-radius: 0 0 30px 30px; box-shadow: 0 1px 1px 0 rgba(0,0,0,0.05),inset 0 1px 0 0 rgba(255,255,255,0.2); }
 
 div.gplayer div.queue-container ol,
-div.gplayer div.queue-container ul { list-style-type: none; margin: 0; padding: 0; }
+div.gplayer div.queue-container ul { list-style-type: none; margin: 0; padding: 0; outline: none; }
 div.gplayer div.queue-container { position: absolute; top: 65px; left: 0; right:0; list-style: none; margin:0; padding:0; }
 div.gplayer div.queue-container ol.queue { height: 100%; width: 100%; }
 div.gplayer div.queue-container ol.queue li.item-wrapper { float: left; background-color: black; border-top: 1px solid black; padding: 6px; margin-left: 4px; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; border-radius: 4px; position: relative; cursor: -webkit-grab; }
